--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,33 @@ header{
 
 
 /* COMMON */
+.row {
+    --bs-gutter-x: 2.5rem;
+    --bs-gutter-y: 0;
+  }
 img{
     width: 100%;
     height: 100%;
+    max-width: 100%;
     display: block;
 }
 
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+li{
+    list-style-type: none;
+}
+.chevron-down{
+    color:gray;
+    font-size: 13px;
+    padding-left: 0.3rem;
+}
+.chevron-down:hover{
+color: #0070d1;
+}
 
 /* -*-*-*-*-*-*-*-*-*-*-*-*HEADER-*-*-*-*-*-*-*-*-*-*-*-*  */
 
@@ -40,15 +61,13 @@ img{
 
 /* bottom */
 .ms_header-bottom{
-    background-color: lightpink;
+    background-color: bisque;
     height: 80px;
 }
 
 .logo-ps{
     width: 65px;
     height: 70px;
-    /* padding-top: 0.5rem; */
-
 }
 
 .burgher{
@@ -57,7 +76,8 @@ img{
     line-height: 4.5rem;
     color: gray;
 }
-.burgher:hover{
+
+.burgher i{
     cursor: pointer;
 }
 
@@ -67,11 +87,49 @@ img{
     padding: 0.3rem 0.8rem 0.3rem 0.8rem;
 }
 
+.main-menu-sx{
+    height: 100%;
+}
 
+.main-menu-dx{
+    height: 100%;
+}
 
+header ul{
+    height: 100%;
+    display: flex;
+    padding: 0;
+    align-items: center;
+}
+.main-menu-dx li{
+    padding: 0 0 0 4rem;
+    text-align: right;
+}
+.main-menu-sx li{
+    padding: 0 3rem 0 0;
+}
 
+.ms_header-btn{
+    background-color: #363636;
+    color: white;
+    border-color: #363636;
+    border-radius: 25px;
+    padding: 10px 20px;
+    font-weight: bold;
+}
 
+.ms_header-btn:hover{
+    color: #0070d1;
+}
 
+ #ms_lens{
+    font-size: 30px;
+    text-align: right;
+ }
+
+ #ms_lens:hover{
+     color: #0070d1;
+ }
 
 
 
