--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,10 @@ header{
     right: 0;
     top: 0;
 }
-
+main{
+    margin-top: 120px;
+    overflow-y: auto;
+}
 
 /* COMMON */
 .row {
@@ -61,7 +64,6 @@ color: #0070d1;
 
 /* bottom */
 .ms_header-bottom{
-    background-color: bisque;
     height: 80px;
 }
 
@@ -101,12 +103,14 @@ header ul{
     padding: 0;
     align-items: center;
 }
-.main-menu-dx li{
-    padding: 0 0 0 4rem;
-    text-align: right;
-}
+
 .main-menu-sx li{
-    padding: 0 3rem 0 0;
+    padding: 0 2rem 0 0;
+}
+
+.main-menu-dx li{
+    padding: 0 0 0 2rem;
+    text-align: right;
 }
 
 .ms_header-btn{
@@ -122,22 +126,91 @@ header ul{
     color: #0070d1;
 }
 
- #ms_lens{
+#ms_lens{
     font-size: 30px;
     text-align: right;
- }
+}
 
- #ms_lens:hover{
-     color: #0070d1;
- }
-
-
-
-
-
+#ms_lens:hover{
+    color: #0070d1;
+}
 
 
 /* -*-*-*-*-*-*-*-*-*-*-*-*-MAIN-*-*-*-*-*-*-*-*-*-*-*-*-*-* */
+
+/* SECTION SPONSORED */
+.ms_sponsored{
+    width: 100%;
+    height: 570px;
+    background-color: bisque;
+    position: relative;
+    background-image: url(../img/jumbo-bg.png);
+    background-size: cover;
+    background-position: bottom;
+    max-width: 100%;
+    color:white
+}
+
+.sponsored-content{
+    width: 93%;
+    border: 1px solid blue;
+    position: absolute;
+    bottom: 3rem;
+    left: 0.7rem;
+}
+
+.game-name{
+    width: 50%;
+    height: auto;
+    border: 1px solid white;
+}
+
+.game-info h2{
+    padding: 2rem 0 1.2rem 0;
+    font-size: 40px;
+}
+
+.game-info p{
+    font-size: 15px;
+}
+
+.ms_buy-btn{
+    background-color: #cd3d26;
+    border-color: #cd3d26;
+    color: white;
+    border-radius: 25px;
+    font-weight: bold;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -151,6 +224,13 @@ header ul{
 
 }
 
-@media all and (min-width: 1400px){
-    
+@media all and (min-width: 1200px){
+
+    .sponsored-content{
+        width: 40%;
+    }
+
+    .game-name img{
+        width: 65%;
+    }
 }
