--- a/css/style.css
+++ b/css/style.css
@@ -9,17 +9,19 @@ header{
     position: fixed;
     right: 0;
     top: 0;
+    z-index: 100;
 }
 main{
     margin-top: 120px;
-    overflow-y: auto;
+    overflow-y:auto;
 }
 
 /* COMMON */
 .row {
     --bs-gutter-x: 2.5rem;
     --bs-gutter-y: 0;
-  }
+}
+
 img{
     width: 100%;
     height: 100%;
@@ -52,14 +54,13 @@ color: #0070d1;
     height: 35px;
     color: white;
     font-size: 20px;
-    position: relative;
+    display: flex;
+    justify-content: flex-end;
 }
 
 .logo-sony{
     width: 100px;
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 /* bottom */
@@ -80,13 +81,10 @@ color: #0070d1;
 }
 
 .burgher i{
-    cursor: pointer;
-}
-
-.burgher i{
     border: 1px solid grey;
     border-radius: 10px;
     padding: 0.3rem 0.8rem 0.3rem 0.8rem;
+    cursor: pointer;
 }
 
 .main-menu-sx{
@@ -180,12 +178,20 @@ header ul{
     color: white;
     border-radius: 25px;
     font-weight: bold;
+}
+/* ----------------------------------------------------------- */
 
+.figurine{
+    padding: 2.5rem 0;
 }
 
+.ms_card{
+    padding: 0.5rem;
+}
 
-
-
+.ms_card img{
+    border-radius: 0.8rem;
+}
 
 
 
