--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,47 @@ li{
 .chevron-down:hover{
 color: #0070d1;
 }
+/*---------------------------- BANNER-------------------- */
+
+.ms_sponsored{
+    width: 100%;
+    height: 570px;
+    background-color: bisque;
+    position: relative;
+    background-size: cover;
+    background-position: bottom;
+    max-width: 100%;
+    color:white
+}
+
+.sponsored-content{
+    width: 93%;
+    position: absolute;
+    bottom: 3rem;
+    left: 0.7rem;
+}
+
+.game-name{
+    width: 50%;
+    height: auto;
+}
+
+.game-info h2{
+    padding: 2rem 0 1.2rem 0;
+    font-size: 40px;
+}
+
+.game-info p{
+    font-size: 15px;
+}
+
+.ms_buy-btn{
+    background-color: #cd3d26;
+    border-color: #cd3d26;
+    color: white;
+    border-radius: 25px;
+    font-weight: bold;
+}
 
 /* -*-*-*-*-*-*-*-*-*-*-*-*HEADER-*-*-*-*-*-*-*-*-*-*-*-*  */
 
@@ -136,50 +177,11 @@ header ul{
 
 /* -*-*-*-*-*-*-*-*-*-*-*-*-MAIN-*-*-*-*-*-*-*-*-*-*-*-*-*-* */
 
-/* SECTION SPONSORED */
-.ms_sponsored{
-    width: 100%;
-    height: 570px;
-    background-color: bisque;
-    position: relative;
+/* -------------------------Section Banner Returnal */
+.ms_returnal{
+   
     background-image: url(../img/jumbo-bg.png);
-    background-size: cover;
-    background-position: bottom;
-    max-width: 100%;
-    color:white
 }
-
-.sponsored-content{
-    width: 93%;
-    /* border: 1px solid blue; */
-    position: absolute;
-    bottom: 3rem;
-    left: 0.7rem;
-}
-
-.game-name{
-    width: 50%;
-    height: auto;
-    /* border: 1px solid white; */
-}
-
-.game-info h2{
-    padding: 2rem 0 1.2rem 0;
-    font-size: 40px;
-}
-
-.game-info p{
-    font-size: 15px;
-}
-
-.ms_buy-btn{
-    background-color: #cd3d26;
-    border-color: #cd3d26;
-    color: white;
-    border-radius: 25px;
-    font-weight: bold;
-}
-/* ----------------------------------------------------------- */
 
 /* -------------------------------------Section Cards */
 .sect-card{
@@ -219,7 +221,7 @@ header ul{
     font-size: 18px;
     font-weight: 600;
 }
-/* Section Console */
+/* ----------------------------------------Section Console */
 .console{
     padding-top: 2.5rem;
 }
@@ -256,7 +258,12 @@ header ul{
 }
 
 
+/* -------------------------------Section Banner It-Take-Two */
 
+.ms_it-takes-two{
+    height: 620px;
+    background-image: url(../img/it-takes-two-hero-banner-desktop.jpg);
+}
 
 
 
